--- a/src/css/style.css
+++ b/src/css/style.css
@@ -543,8 +543,12 @@ main {
 
 footer {
   width: 100%;
-  display: flex;
   height: 90px;
+}
+
+footer .wrapper {
+  height: 100%;
+  display: flex;
   flex: 0 0 auto;
   flex-direction: column;
   justify-content: space-around;
@@ -627,210 +631,210 @@ box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
   0% {
-    clip: rect(6px, 9999px, 83px, 0);
-    transform: skew(0.28deg);
+    clip: rect(45px, 9999px, 16px, 0);
+    transform: skew(0.65deg);
   }
   5% {
-    clip: rect(79px, 9999px, 56px, 0);
-    transform: skew(0.61deg);
+    clip: rect(11px, 9999px, 19px, 0);
+    transform: skew(0.26deg);
   }
   10% {
-    clip: rect(68px, 9999px, 92px, 0);
-    transform: skew(0.45deg);
+    clip: rect(10px, 9999px, 87px, 0);
+    transform: skew(0.05deg);
   }
   15% {
-    clip: rect(68px, 9999px, 93px, 0);
-    transform: skew(0.78deg);
-  }
-  20% {
-    clip: rect(43px, 9999px, 34px, 0);
+    clip: rect(29px, 9999px, 91px, 0);
     transform: skew(0.73deg);
   }
+  20% {
+    clip: rect(53px, 9999px, 75px, 0);
+    transform: skew(0.85deg);
+  }
   25% {
-    clip: rect(62px, 9999px, 30px, 0);
-    transform: skew(0.58deg);
+    clip: rect(68px, 9999px, 60px, 0);
+    transform: skew(0.43deg);
   }
   30% {
-    clip: rect(83px, 9999px, 81px, 0);
-    transform: skew(0.3deg);
-  }
-  35% {
-    clip: rect(13px, 9999px, 83px, 0);
-    transform: skew(0.91deg);
-  }
-  40% {
-    clip: rect(18px, 9999px, 54px, 0);
-    transform: skew(0.59deg);
-  }
-  45% {
-    clip: rect(90px, 9999px, 66px, 0);
-    transform: skew(0.97deg);
-  }
-  50% {
-    clip: rect(14px, 9999px, 77px, 0);
+    clip: rect(19px, 9999px, 90px, 0);
     transform: skew(0.66deg);
   }
-  55% {
-    clip: rect(21px, 9999px, 54px, 0);
-    transform: skew(0.08deg);
+  35% {
+    clip: rect(11px, 9999px, 41px, 0);
+    transform: skew(0.67deg);
   }
-  60% {
-    clip: rect(56px, 9999px, 12px, 0);
+  40% {
+    clip: rect(11px, 9999px, 26px, 0);
+    transform: skew(0.25deg);
+  }
+  45% {
+    clip: rect(1px, 9999px, 60px, 0);
+    transform: skew(0.93deg);
+  }
+  50% {
+    clip: rect(83px, 9999px, 75px, 0);
+    transform: skew(0.81deg);
+  }
+  55% {
+    clip: rect(25px, 9999px, 79px, 0);
     transform: skew(0.29deg);
   }
+  60% {
+    clip: rect(27px, 9999px, 53px, 0);
+    transform: skew(0.03deg);
+  }
   65% {
-    clip: rect(15px, 9999px, 43px, 0);
-    transform: skew(0.32deg);
+    clip: rect(45px, 9999px, 33px, 0);
+    transform: skew(0.03deg);
   }
   70% {
-    clip: rect(85px, 9999px, 16px, 0);
-    transform: skew(0.84deg);
+    clip: rect(5px, 9999px, 23px, 0);
+    transform: skew(0.19deg);
   }
   75% {
-    clip: rect(44px, 9999px, 79px, 0);
-    transform: skew(0.82deg);
+    clip: rect(47px, 9999px, 27px, 0);
+    transform: skew(0.31deg);
   }
   80% {
-    clip: rect(40px, 9999px, 47px, 0);
-    transform: skew(0.74deg);
+    clip: rect(83px, 9999px, 23px, 0);
+    transform: skew(0.47deg);
   }
   85% {
-    clip: rect(70px, 9999px, 89px, 0);
-    transform: skew(0.55deg);
+    clip: rect(25px, 9999px, 57px, 0);
+    transform: skew(0.48deg);
   }
   90% {
-    clip: rect(79px, 9999px, 7px, 0);
-    transform: skew(0.8deg);
+    clip: rect(62px, 9999px, 64px, 0);
+    transform: skew(0.37deg);
   }
   95% {
-    clip: rect(66px, 9999px, 30px, 0);
-    transform: skew(0.64deg);
+    clip: rect(9px, 9999px, 44px, 0);
+    transform: skew(0.5deg);
   }
   100% {
-    clip: rect(37px, 9999px, 71px, 0);
-    transform: skew(0.07deg);
+    clip: rect(25px, 9999px, 97px, 0);
+    transform: skew(0.02deg);
   }
 }
 
 @keyframes glitch-anim2 {
   0% {
-    clip: rect(90px, 9999px, 17px, 0);
-    transform: skew(0.27deg);
+    clip: rect(54px, 9999px, 48px, 0);
+    transform: skew(1deg);
   }
   5% {
-    clip: rect(54px, 9999px, 93px, 0);
-    transform: skew(0.09deg);
+    clip: rect(78px, 9999px, 67px, 0);
+    transform: skew(0.63deg);
   }
   10% {
-    clip: rect(63px, 9999px, 29px, 0);
-    transform: skew(0.86deg);
+    clip: rect(51px, 9999px, 52px, 0);
+    transform: skew(0.08deg);
   }
   15% {
-    clip: rect(82px, 9999px, 91px, 0);
-    transform: skew(0.96deg);
+    clip: rect(93px, 9999px, 82px, 0);
+    transform: skew(0.29deg);
   }
   20% {
-    clip: rect(81px, 9999px, 26px, 0);
-    transform: skew(0.88deg);
+    clip: rect(95px, 9999px, 97px, 0);
+    transform: skew(0.6deg);
   }
   25% {
-    clip: rect(15px, 9999px, 12px, 0);
-    transform: skew(0.31deg);
+    clip: rect(94px, 9999px, 22px, 0);
+    transform: skew(0.23deg);
   }
   30% {
-    clip: rect(6px, 9999px, 49px, 0);
-    transform: skew(0.39deg);
-  }
-  35% {
-    clip: rect(88px, 9999px, 28px, 0);
-    transform: skew(0.21deg);
-  }
-  40% {
-    clip: rect(2px, 9999px, 47px, 0);
-    transform: skew(0.33deg);
-  }
-  45% {
-    clip: rect(49px, 9999px, 33px, 0);
+    clip: rect(71px, 9999px, 54px, 0);
     transform: skew(0.77deg);
   }
+  35% {
+    clip: rect(63px, 9999px, 69px, 0);
+    transform: skew(0.32deg);
+  }
+  40% {
+    clip: rect(27px, 9999px, 16px, 0);
+    transform: skew(0.1deg);
+  }
+  45% {
+    clip: rect(37px, 9999px, 53px, 0);
+    transform: skew(0.2deg);
+  }
   50% {
-    clip: rect(76px, 9999px, 75px, 0);
-    transform: skew(0.27deg);
+    clip: rect(66px, 9999px, 32px, 0);
+    transform: skew(0.74deg);
   }
   55% {
-    clip: rect(84px, 9999px, 21px, 0);
-    transform: skew(0.84deg);
+    clip: rect(96px, 9999px, 100px, 0);
+    transform: skew(0.14deg);
   }
   60% {
-    clip: rect(22px, 9999px, 96px, 0);
-    transform: skew(0.57deg);
+    clip: rect(74px, 9999px, 67px, 0);
+    transform: skew(0.29deg);
   }
   65% {
-    clip: rect(25px, 9999px, 81px, 0);
-    transform: skew(0.94deg);
+    clip: rect(73px, 9999px, 50px, 0);
+    transform: skew(0.74deg);
   }
   70% {
-    clip: rect(7px, 9999px, 48px, 0);
-    transform: skew(0.84deg);
+    clip: rect(38px, 9999px, 67px, 0);
+    transform: skew(0.9deg);
   }
   75% {
-    clip: rect(37px, 9999px, 61px, 0);
-    transform: skew(0.94deg);
+    clip: rect(57px, 9999px, 46px, 0);
+    transform: skew(0.36deg);
   }
   80% {
-    clip: rect(23px, 9999px, 60px, 0);
-    transform: skew(0.66deg);
+    clip: rect(23px, 9999px, 94px, 0);
+    transform: skew(0.83deg);
   }
   85% {
-    clip: rect(57px, 9999px, 54px, 0);
-    transform: skew(0.7deg);
+    clip: rect(36px, 9999px, 45px, 0);
+    transform: skew(0.15deg);
   }
   90% {
-    clip: rect(1px, 9999px, 43px, 0);
-    transform: skew(0.37deg);
+    clip: rect(75px, 9999px, 61px, 0);
+    transform: skew(0.28deg);
   }
   95% {
-    clip: rect(98px, 9999px, 18px, 0);
-    transform: skew(0.93deg);
+    clip: rect(36px, 9999px, 11px, 0);
+    transform: skew(0.6deg);
   }
   100% {
-    clip: rect(33px, 9999px, 71px, 0);
-    transform: skew(0.91deg);
+    clip: rect(33px, 9999px, 12px, 0);
+    transform: skew(0.66deg);
   }
 }
 
 @keyframes glitch-skew {
   0% {
-    transform: skew(3deg);
+    transform: skew(4deg);
   }
   10% {
-    transform: skew(4deg);
+    transform: skew(-4deg);
   }
   20% {
     transform: skew(-4deg);
   }
   30% {
-    transform: skew(-1deg);
+    transform: skew(-4deg);
   }
   40% {
     transform: skew(5deg);
   }
   50% {
-    transform: skew(-3deg);
+    transform: skew(-1deg);
   }
   60% {
-    transform: skew(-2deg);
+    transform: skew(3deg);
   }
   70% {
-    transform: skew(2deg);
+    transform: skew(5deg);
   }
   80% {
-    transform: skew(-4deg);
+    transform: skew(5deg);
   }
   90% {
     transform: skew(1deg);
   }
   100% {
-    transform: skew(3deg);
+    transform: skew(-3deg);
   }
 }
