--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -229,7 +229,7 @@ main {
   min-width: 320px;
   max-width: 500px;
   width: 50%;
-  
+
   .fa-keyboard {
     position: absolute;
     left: -1rem;
@@ -238,11 +238,11 @@ main {
     opacity: 0.5;
     cursor: pointer;
     transition: opacity 0.25s, transform 0.5s;
-    
+
     &.active {
       opacity: 1;
     }
-    
+
     @include max_400() {
       visibility: hidden;
     }
@@ -418,7 +418,7 @@ main {
   margin: 0 auto;
   width: fit-content;
   transform: translateY(200px);
-  
+
   &.top {
     transform: translateY(0);
   }
@@ -559,15 +559,19 @@ main {
 
 footer {
   width: 100%;
-  display: flex;
   height: 90px;
-  flex: 0 0 auto;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  padding-bottom: 2px;
-  padding-top: 0.5rem;
-  background-color: rgba(0, 0, 0, 0.1);
+
+  .wrapper {
+    height: 100%;
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 2px;
+    padding-top: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
 
   a {
     color: inherit;
@@ -601,7 +605,7 @@ footer {
   }
 }
 
-@mixin glitchCopy { 
+@mixin glitchCopy {
   content: attr(data-text);
   position: absolute;
   top: 0;
@@ -611,33 +615,33 @@ footer {
 }
 
 .glitch {
-position: relative;
-color: inherit;
-animation: glitch-skew 1s infinite linear alternate-reverse;
+  position: relative;
+  color: inherit;
+  animation: glitch-skew 1s infinite linear alternate-reverse;
 
-&::before{
-  // Duplicates our text with the mixin.
-  @include glitchCopy;
-  // Scoots text slightly to the left for the color offset.
-  left: 2px;
-  // Creates the color 'shadow' that happens on the glitch.
-  text-shadow: -2px 0 #ff00c1;
-  /* Creates an initial clip for our glitch. This works in
+  &::before {
+    // Duplicates our text with the mixin.
+    @include glitchCopy;
+    // Scoots text slightly to the left for the color offset.
+    left: 2px;
+    // Creates the color 'shadow' that happens on the glitch.
+    text-shadow: -2px 0 #ff00c1;
+    /* Creates an initial clip for our glitch. This works in
   a typical top,right,bottom,left fashion and creates a mask
   to only show a certain part of the glitch at a time. */
-  clip: rect(44px, 450px, 56px, 0);
-  /* Runs our glitch-anim defined below to run in a 5s loop, infinitely,
+    clip: rect(44px, 450px, 56px, 0);
+    /* Runs our glitch-anim defined below to run in a 5s loop, infinitely,
   with an alternating animation to keep things fresh. */
-  animation: glitch-anim 5s infinite linear alternate-reverse;
-}
+    animation: glitch-anim 5s infinite linear alternate-reverse;
+  }
 
-// Creates a copy after our text. Note comments from ::before.
-&::after {
-  @include glitchCopy;
-  left: -2px;
-  text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
-  animation: glitch-anim2 1s infinite linear alternate-reverse;
-}
+  // Creates a copy after our text. Note comments from ::before.
+  &::after {
+    @include glitchCopy;
+    left: -2px;
+    text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
+    animation: glitch-anim2 1s infinite linear alternate-reverse;
+  }
 }
 
 /* Creates an animation with 20 steps. For each step, it calculates 
@@ -645,32 +649,35 @@ a percentage for the specific step. It then generates a random clip
 box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
-$steps: 20;
-@for $i from 0 through $steps {
-  #{percentage($i*(1/$steps))} {
-    clip: rect(random(100)+px, 9999px, random(100)+px, 0);
-    transform: skew((random(100) / 100) + deg);
+  $steps: 20;
+
+  @for $i from 0 through $steps {
+    #{percentage($i*(1/$steps))} {
+      clip: rect(random(100)+px, 9999px, random(100)+px, 0);
+      transform: skew((random(100) / 100) + deg);
+    }
   }
-}
 }
 
 // Same deal, just duplicated for ultra randomness.
 @keyframes glitch-anim2 {
-$steps: 20;
-@for $i from 0 through $steps {
-  #{percentage($i*(1/$steps))} {
-    clip: rect(random(100)+px, 9999px, random(100)+px, 0);
-    transform: skew((random(100) / 100) + deg);
+  $steps: 20;
+
+  @for $i from 0 through $steps {
+    #{percentage($i*(1/$steps))} {
+      clip: rect(random(100)+px, 9999px, random(100)+px, 0);
+      transform: skew((random(100) / 100) + deg);
+    }
   }
-}
 }
 
 // Does the same deal as before, but now only skews. Used for main text.
 @keyframes glitch-skew {
-$steps: 10;
-@for $i from 0 through $steps {
-  #{percentage($i*(1/$steps))} {
-    transform: skew((random(10) - 5) + deg);
+  $steps: 10;
+
+  @for $i from 0 through $steps {
+    #{percentage($i*(1/$steps))} {
+      transform: skew((random(10) - 5) + deg);
+    }
   }
-}
 }
