--- a/src/css/style.css
+++ b/src/css/style.css
@@ -508,11 +508,11 @@ main {
   transform: translateX(0%);
 }
 
-#modal .modal-poster {
+#movieModal .modal-poster {
   max-width: 100%;
 }
 
-#modal .text-plot {
+#movieModal .text-plot {
   padding-top: 0.25rem;
   color: darkgray;
   font-size: 0.9rem;
@@ -627,210 +627,210 @@ box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
   0% {
-    clip: rect(6px, 9999px, 83px, 0);
-    transform: skew(0.28deg);
+    clip: rect(74px, 9999px, 15px, 0);
+    transform: skew(0.87deg);
   }
   5% {
-    clip: rect(79px, 9999px, 56px, 0);
-    transform: skew(0.61deg);
+    clip: rect(58px, 9999px, 89px, 0);
+    transform: skew(0.79deg);
   }
   10% {
-    clip: rect(68px, 9999px, 92px, 0);
-    transform: skew(0.45deg);
+    clip: rect(98px, 9999px, 36px, 0);
+    transform: skew(0.62deg);
   }
   15% {
-    clip: rect(68px, 9999px, 93px, 0);
-    transform: skew(0.78deg);
+    clip: rect(58px, 9999px, 63px, 0);
+    transform: skew(0.28deg);
   }
   20% {
-    clip: rect(43px, 9999px, 34px, 0);
-    transform: skew(0.73deg);
+    clip: rect(24px, 9999px, 19px, 0);
+    transform: skew(0.04deg);
   }
   25% {
-    clip: rect(62px, 9999px, 30px, 0);
-    transform: skew(0.58deg);
+    clip: rect(16px, 9999px, 92px, 0);
+    transform: skew(0.06deg);
   }
   30% {
-    clip: rect(83px, 9999px, 81px, 0);
-    transform: skew(0.3deg);
-  }
-  35% {
-    clip: rect(13px, 9999px, 83px, 0);
-    transform: skew(0.91deg);
-  }
-  40% {
-    clip: rect(18px, 9999px, 54px, 0);
-    transform: skew(0.59deg);
-  }
-  45% {
-    clip: rect(90px, 9999px, 66px, 0);
-    transform: skew(0.97deg);
-  }
-  50% {
-    clip: rect(14px, 9999px, 77px, 0);
+    clip: rect(52px, 9999px, 16px, 0);
     transform: skew(0.66deg);
   }
+  35% {
+    clip: rect(18px, 9999px, 30px, 0);
+    transform: skew(0.38deg);
+  }
+  40% {
+    clip: rect(38px, 9999px, 26px, 0);
+    transform: skew(0.49deg);
+  }
+  45% {
+    clip: rect(33px, 9999px, 50px, 0);
+    transform: skew(0.58deg);
+  }
+  50% {
+    clip: rect(38px, 9999px, 81px, 0);
+    transform: skew(0.21deg);
+  }
   55% {
-    clip: rect(21px, 9999px, 54px, 0);
-    transform: skew(0.08deg);
+    clip: rect(82px, 9999px, 99px, 0);
+    transform: skew(0.93deg);
   }
   60% {
-    clip: rect(56px, 9999px, 12px, 0);
-    transform: skew(0.29deg);
+    clip: rect(68px, 9999px, 31px, 0);
+    transform: skew(0.97deg);
   }
   65% {
-    clip: rect(15px, 9999px, 43px, 0);
-    transform: skew(0.32deg);
+    clip: rect(1px, 9999px, 54px, 0);
+    transform: skew(0.86deg);
   }
   70% {
-    clip: rect(85px, 9999px, 16px, 0);
-    transform: skew(0.84deg);
+    clip: rect(35px, 9999px, 33px, 0);
+    transform: skew(0.04deg);
   }
   75% {
-    clip: rect(44px, 9999px, 79px, 0);
-    transform: skew(0.82deg);
+    clip: rect(40px, 9999px, 35px, 0);
+    transform: skew(0.44deg);
   }
   80% {
-    clip: rect(40px, 9999px, 47px, 0);
-    transform: skew(0.74deg);
+    clip: rect(96px, 9999px, 15px, 0);
+    transform: skew(0.77deg);
   }
   85% {
-    clip: rect(70px, 9999px, 89px, 0);
-    transform: skew(0.55deg);
+    clip: rect(12px, 9999px, 91px, 0);
+    transform: skew(0.51deg);
   }
   90% {
-    clip: rect(79px, 9999px, 7px, 0);
-    transform: skew(0.8deg);
+    clip: rect(93px, 9999px, 19px, 0);
+    transform: skew(0.49deg);
   }
   95% {
-    clip: rect(66px, 9999px, 30px, 0);
-    transform: skew(0.64deg);
+    clip: rect(39px, 9999px, 40px, 0);
+    transform: skew(0.59deg);
   }
   100% {
-    clip: rect(37px, 9999px, 71px, 0);
-    transform: skew(0.07deg);
+    clip: rect(3px, 9999px, 55px, 0);
+    transform: skew(0.89deg);
   }
 }
 
 @keyframes glitch-anim2 {
   0% {
-    clip: rect(90px, 9999px, 17px, 0);
-    transform: skew(0.27deg);
+    clip: rect(82px, 9999px, 31px, 0);
+    transform: skew(0.13deg);
   }
   5% {
-    clip: rect(54px, 9999px, 93px, 0);
-    transform: skew(0.09deg);
+    clip: rect(68px, 9999px, 83px, 0);
+    transform: skew(0.44deg);
   }
   10% {
-    clip: rect(63px, 9999px, 29px, 0);
-    transform: skew(0.86deg);
+    clip: rect(87px, 9999px, 40px, 0);
+    transform: skew(0.06deg);
   }
   15% {
-    clip: rect(82px, 9999px, 91px, 0);
-    transform: skew(0.96deg);
+    clip: rect(70px, 9999px, 33px, 0);
+    transform: skew(0.95deg);
   }
   20% {
-    clip: rect(81px, 9999px, 26px, 0);
-    transform: skew(0.88deg);
+    clip: rect(78px, 9999px, 7px, 0);
+    transform: skew(0.8deg);
   }
   25% {
-    clip: rect(15px, 9999px, 12px, 0);
-    transform: skew(0.31deg);
+    clip: rect(19px, 9999px, 62px, 0);
+    transform: skew(0.65deg);
   }
   30% {
-    clip: rect(6px, 9999px, 49px, 0);
-    transform: skew(0.39deg);
+    clip: rect(79px, 9999px, 21px, 0);
+    transform: skew(0.04deg);
   }
   35% {
-    clip: rect(88px, 9999px, 28px, 0);
-    transform: skew(0.21deg);
+    clip: rect(42px, 9999px, 50px, 0);
+    transform: skew(0.79deg);
   }
   40% {
-    clip: rect(2px, 9999px, 47px, 0);
-    transform: skew(0.33deg);
+    clip: rect(91px, 9999px, 60px, 0);
+    transform: skew(0.78deg);
   }
   45% {
-    clip: rect(49px, 9999px, 33px, 0);
-    transform: skew(0.77deg);
-  }
-  50% {
-    clip: rect(76px, 9999px, 75px, 0);
-    transform: skew(0.27deg);
-  }
-  55% {
-    clip: rect(84px, 9999px, 21px, 0);
-    transform: skew(0.84deg);
-  }
-  60% {
-    clip: rect(22px, 9999px, 96px, 0);
+    clip: rect(49px, 9999px, 37px, 0);
     transform: skew(0.57deg);
   }
+  50% {
+    clip: rect(32px, 9999px, 5px, 0);
+    transform: skew(0.12deg);
+  }
+  55% {
+    clip: rect(53px, 9999px, 77px, 0);
+    transform: skew(0.78deg);
+  }
+  60% {
+    clip: rect(59px, 9999px, 2px, 0);
+    transform: skew(0.33deg);
+  }
   65% {
-    clip: rect(25px, 9999px, 81px, 0);
-    transform: skew(0.94deg);
+    clip: rect(66px, 9999px, 61px, 0);
+    transform: skew(0.76deg);
   }
   70% {
-    clip: rect(7px, 9999px, 48px, 0);
-    transform: skew(0.84deg);
+    clip: rect(46px, 9999px, 71px, 0);
+    transform: skew(0.79deg);
   }
   75% {
-    clip: rect(37px, 9999px, 61px, 0);
-    transform: skew(0.94deg);
+    clip: rect(29px, 9999px, 84px, 0);
+    transform: skew(0.45deg);
   }
   80% {
-    clip: rect(23px, 9999px, 60px, 0);
-    transform: skew(0.66deg);
+    clip: rect(65px, 9999px, 26px, 0);
+    transform: skew(0.16deg);
   }
   85% {
-    clip: rect(57px, 9999px, 54px, 0);
-    transform: skew(0.7deg);
+    clip: rect(32px, 9999px, 8px, 0);
+    transform: skew(0.32deg);
   }
   90% {
-    clip: rect(1px, 9999px, 43px, 0);
-    transform: skew(0.37deg);
+    clip: rect(37px, 9999px, 18px, 0);
+    transform: skew(0.59deg);
   }
   95% {
-    clip: rect(98px, 9999px, 18px, 0);
-    transform: skew(0.93deg);
+    clip: rect(99px, 9999px, 34px, 0);
+    transform: skew(0.14deg);
   }
   100% {
-    clip: rect(33px, 9999px, 71px, 0);
-    transform: skew(0.91deg);
+    clip: rect(12px, 9999px, 35px, 0);
+    transform: skew(0.68deg);
   }
 }
 
 @keyframes glitch-skew {
   0% {
-    transform: skew(3deg);
-  }
-  10% {
-    transform: skew(4deg);
-  }
-  20% {
-    transform: skew(-4deg);
-  }
-  30% {
     transform: skew(-1deg);
   }
-  40% {
-    transform: skew(5deg);
-  }
-  50% {
-    transform: skew(-3deg);
-  }
-  60% {
-    transform: skew(-2deg);
-  }
-  70% {
-    transform: skew(2deg);
-  }
-  80% {
+  10% {
     transform: skew(-4deg);
   }
-  90% {
+  20% {
+    transform: skew(0deg);
+  }
+  30% {
+    transform: skew(3deg);
+  }
+  40% {
+    transform: skew(-2deg);
+  }
+  50% {
+    transform: skew(-4deg);
+  }
+  60% {
+    transform: skew(3deg);
+  }
+  70% {
     transform: skew(1deg);
   }
+  80% {
+    transform: skew(1deg);
+  }
+  90% {
+    transform: skew(0deg);
+  }
   100% {
-    transform: skew(3deg);
+    transform: skew(4deg);
   }
 }
